k8s/letsencrypt.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: letsencrypt 
  labels:
    app: letsencrypt
