k8s/pg-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pg-cluster
  labels:
    app: pg-cluster
