k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-server
 namespace: argocd
 annotations:
   cert-manager.io/issuer: "letsencrypt"
spec:
 tls:
   - hosts:
       - cloudomega.sytes.net
     secretName: tls-letsencrypt
 rules:
   - host:
       - cloudomega.sytes.net
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server
               port:
                 name: web
